--- a/gulp-start/app/index.html
+++ b/gulp-start/app/index.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     
-
+    
+<script src="https://ajax.googleapis.com/ajax/libs/d3js/5.15.0/d3.min.js"></script>
 <script src="libs.min.js"></script>
 <script src="js/main.js"></script>    
 </body>
